--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,21 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Firebase configuration files (contain sensitive API keys)
+lib/firebase_options.dart
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist
+macos/Runner/GoogleService-Info.plist
+.firebase/
+.firebaserc
+
+# Environment variables and secrets
+.env
+.env.local
+*.env
+
+# API keys and credentials
+**/api_keys.dart
+**/secrets.dart
+**/credentials.dart
